todo_app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: todo-app-output
          persistentVolumeClaim:
            claimName: todo-app-claim
      containers:
        - name: todo-app
          image: tniemi/dwk-todo-app:1.13
          volumeMounts:
            - name: todo-app-output
              mountPath: /app/files
