todo_app/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dwk-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todo-app-svc
            port:
              number: 2345
      - path: /todos
        pathType: Prefix
        backend:
          service:
            name: todo-backend-svc
            port:
              number: 2345
